--- a/api/.env.example
+++ b/api/.env.example
@@ -5,3 +5,4 @@ DB_USERNAME=your_database_username
 DB_PASSWORD=your_database_password
 DB_DATABASE=jira_development
 JWT_SECRET=development12345
+MONGO_URL=mongo_url
