--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
     "quill": "^1.3.7",
+    "quill-mention": "^4.1.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-content-loader": "^6.2.1",
