--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^5.9.0",
     "mongoose": "^7.5.3",
     "mysql2": "^3.6.1",
+    "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
     "striptags": "^3.1.1",
     "typeorm": "^0.3.17"
@@ -39,6 +40,7 @@
     "@types/jsonwebtoken": "^8.3.5",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.11",
+    "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "cross-env": "^6.0.3",
