--- a/api/package.json
+++ b/api/package.json
@@ -49,6 +49,7 @@
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "lint-staged": "^9.4.3",
     "nodemon": "^2.0.0",
     "prettier": "^1.19.1",
