--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 JWT_SECRET=development12345
-MONGO_URL=mongo_url
-MAILER_MAIL_ID=user@mail.com
-MAILER_MAIL_PASSWORD=pass
-FRONTEND_JIRA_ISSUE=http://skillbridge.work/project/board/issues/
+MONGO_URL=mongodb+srv://nawazshareefshaiksfdc:G5mxA09G2aH8xrJH@cluster0.xmubkoo.mongodb.net/?retryWrites=true&w=majority
+MAILER_MAIL_ID=syedjaveed@nextgen-is.com
+MAILER_MAIL_PASSWORD=@cipX0911
+FRONTEND_JIRA_BASE_URL=http://skillbridge.work/
